2007-06-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sml-mode.el (sml-mode-variables): Set comment-quote-nested instead of
	comment-nested.  Set comment-end-skip.
	(sml-first-starter-p): New function.
	(sml-indent-starter): Use it to fix an indentation bug.
	(sml-mlton-command, sml-mlton-mainfile): New vars.
	(sml-mlton-typecheck): New command.
	(sml-defuse-file): New var.
	(sml-defuse-def-regexp, sml-defuse-use-regexp-format): New consts.
	(sml-defuse-file, sml-defuse-symdata-at-point): New functions.
	(sml-defuse-set-file, sml-defuse-jump-to-def): New commands.

2005-11-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sml-move.el (sml-find-match-forward): Avoid infinite looping if the
	construct is not properly closed (yet).

2005-11-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sml-defs.el (sml-mode-menu): Remove left over obsolete entries.

	* sml-proc.el (inferior-sml-mode): Preserve the menu-bar of the
	compilation minor mode, if any.

2004-11-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Release version 4.0.

2004-11-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sml-mode.el (sml-font-lock-symbols-alist): Add yet more silly entries.

2004-11-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sml-mode.el (sml-font-lock-symbols-alist): Add entries for >= and <=.
	(sml-font-lock-symbols-alist): Add entries for simple type variables.
	(sml-font-lock-compose-symbol): Add support for non-punctuation syms.

2004-11-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sml-move.el (sml-backward-sexp, sml-forward-sexp): Remove unused var.

	* sml-mode.el (sml-calculate-indentation): Remove unused var.
	(sml-get-indent): Change first arg's meaning.
	(sml-get-sym-indent): Adjust call.
	(sml-forms-menu): Simplify.
	(sml-font-lock-symbols, sml-font-lock-symbols-alist): New vars.
	(sml-font-lock-compose-symbol, sml-font-lock-symbols-keywords):
	New funs.
	(sml-font-lock-keywords): Use them.

	* sml-compat.el (temp-directory): Get rid of warning.
